[package]
name = "alarmhook"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
feed-rs = "2.3.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
